--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "scripts": {
     "build": "rm -rf dist; npm run lint && rollup -c && rollup -c rollup.es2015-config.js",
     "lint": "standard index.js",
+    "posttest": "#nyc --cache --reporter=lcov --reporter=text tap --no-cov --timeout=150 test/*.js",
+    "pretest": "npm run lint",
     "test": "ava"
   },
   "keywords": [
@@ -22,6 +24,7 @@
     "babel-preset-stage-2": "^6.3.13",
     "rollup": "^0.24.0",
     "rollup-plugin-babel": "^2.3.6",
-    "standard": "^5.4.1"
+    "standard": "^5.4.1",
+    "tap": "^5.0.1"
   }
 }
