--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
     "rollup-plugin-babel": "^2.3.6",
     "standard": "^5.4.1",
     "tap": "^5.0.1"
+  },
+  "dependencies": {
+    "moment": "^2.11.0",
+    "uuid": "^2.0.1"
   }
 }
