--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "standard index.js",
     "posttest": "#nyc --cache --reporter=lcov --reporter=text tap --no-cov --timeout=150 test/*.js",
     "pretest": "npm run lint",
-    "test": "ava"
+    "test": "ava --tap | faucet"
   },
   "keywords": [
     "task",
@@ -22,6 +22,7 @@
     "ava": "^0.9.1",
     "babel-preset-es2015-rollup": "^1.0.0",
     "babel-preset-stage-2": "^6.3.13",
+    "faucet": "0.0.1",
     "rollup": "^0.24.0",
     "rollup-plugin-babel": "^2.3.6",
     "standard": "^5.4.1",
