--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,26 @@
+sudo: false
 language: node_js
+cache:
+  directories:
+    - node_modules
+notifications:
+  email: false
 node_js:
-  - "5.3"
-  - "4.2"
-  - "0.12"
-  - "0.11"
-  - "iojs"
+  - '5'
+  - '4'
+  - '0.12'
+  - '0.11'
+before_install:
+  - npm i -g npm@^2.0.0
+before_script:
+  - npm prune
+script:
+  - npm run test-ci
+after_success:
+  - 'curl -Lo travis_after_all.py https://git.io/travis_after_all'
+  - python travis_after_all.py
+  - 'export $(cat .to_export_back) &> /dev/null'
+  - npm run semantic-release
+branches:
+  except:
+    - "/^v\\d+\\.\\d+\\.\\d+$/"
